--- a/src/app/core/components/sign-in/sign-in.component.html
+++ b/src/app/core/components/sign-in/sign-in.component.html
@@ -9,6 +9,8 @@
     
           <div class="modal-body p-5 pt-0">
             <form #loginform="ngForm">
+              <div class="alert alert-danger" *ngIf="this.invalidLogin">{{this.errorMessage}}</div>
+               
               <div class="form-floating mb-3">
                 <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com" ngModel name="username" #username="ngModel">
                 <label for="floatingInput">Email address</label>
@@ -19,7 +21,7 @@
                 <label for="floatingPassword">Password</label>
                 <div class="alert alert-danger" *ngIf="password.invalid && password.dirty">password must contain at least 1 Maj 1 Min and lengthmin of 7</div>
               </div>
-              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary " [disabled]="loginform.invalid" data-bs-dismiss="modal" type="submit"(click)="login(loginform)" >sign in</button>
+              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary " [disabled]="loginform.invalid"  type="submit"(click)="login(loginform)" >sign in</button>
               <small class="text-muted p-1">you don't have an account sign up!!</small>
               <button [routerLink]="['sign-up']"class="w-100 mb-2 btn btn-lg rounded-4 btn-outline-primary" type="submit">sign up</button>
               <hr class="my-4">
