--- a/src/app/core/pages/messaging/message/message.component.css
+++ b/src/app/core/pages/messaging/message/message.component.css
@@ -1,4 +1,4 @@
-p {
+/*p {
   font-size: medium;
   background-color: lightgray;
   padding: 5px;
@@ -13,4 +13,45 @@ p {
 
 .ownMessage {
   background-color: lightblue;
+}
+
+
+
+/* new message style */
+
+
+.chat-message-left,
+.chat-message-right {
+  display: flex;
+  flex-shrink: 0
+}
+
+.chat-message-left {
+  margin-right: auto
+}
+
+.chat-message-right {
+  flex-direction: row-reverse;
+  margin-left: auto;
+  
+}
+
+.ownmessage{
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: row-reverse;
+  margin-left: auto;
+}
+.blue {
+  background-color: rgb(68, 171, 205);
+}
+
+.leftmsg{
+  display: flex;
+  flex-shrink: 0;
+  margin-right: auto
+}
+
+.grey{
+  background-color: rgb(188, 188, 188);
 }
